# cbioportal-meta-pipeline

./: .gitignore  AGENTS.md  README.md  RESEARCH_PLAN.md  Snakefile  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt  science.yaml  validate.sh
config/: config-10k-genes.yml  config-full.yml  config-pan-cancer.yml  config.yml
data/: README.md  cancer_types_common.txt  cbioportal_study_cohort_profiles.tsv  cohort_stage_validation_comparisons.tsv  cosmic_cancer_type_signatures.tsv  cosmic_cgc.README.md  cosmic_cgc.tsv  pancanatlas_clinical_with_followup.tsv.verification.json  sanchez_vega_2018_tables_s3.xlsx  study_panels.tsv  tcga_case_to_project.tsv  tcga_tss_to_project.tsv  tissue_uberon_mapping.tsv
knowledge/: composite.trig  graph.trig
models/: .gitignore  README.md  h07-agnostic-signature-association.dot  h08-agnostic-signature-association.dot
papers/: references.bib
scripts/: check_gene_coverage.py  cluster_cancer_types.py  cluster_genes.py  convert_to_feather.py  create_combined_freq_tables.py  create_combined_gene_cancer_freq_table.py  create_combined_gene_cancer_mutation_matrices.py  create_combined_gene_patient_matrix.py  create_combined_sample_table.py  create_cooccurrence_matrices.py  create_correlation_matrices.py  create_dataset_summary_table.py  create_disease_mutation_count_matrix.py  create_freq_tables.py  create_gene_patient_mutation_count_matrix.py  create_patient_mutation_count_matrix.py  create_protein_length_mapping.py  download_dataset.py  filter_genes.py  summary.Rmd
specs/: research-question.md
tasks/: active.md
(+1153 files in other folders)
