[project]
name = "cbioportal-science-tools"
version = "0.1.0"
description = "Project-local tooling for the cBioPortal meta-analysis pipeline (Science-managed)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "snakemake>=9.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "science-tool",
]

[tool.uv.sources]
science-tool = { path = "../../science/science-tool", editable = true }
