[project]
name = "cbioportal-science-tools"
version = "0.1.0"
description = "Project-local tooling for the cBioPortal meta-analysis pipeline (Science-managed)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sigprofilerassignment>=1.1.3",
    "sigprofilermatrixgenerator>=1.3.6",
    "snakemake>=9.19.0",
]

[dependency-groups]
dev = [
    "diptest>=0.10.0",
    "pytest>=9.0.3",
    "science-tool",
]

[tool.uv.sources]
science-tool = { path = "../../../science/science-tool", editable = true }

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that download reference data or touch external tools",
]
